--- a/portfolio.css
+++ b/portfolio.css
@@ -22,6 +22,7 @@ body {
   gap: 40px;
   align-items: center;
   justify-content: center;
+  transition: 0.5s ease-in-out;
 }
 .hamburger {
   display: none;
@@ -130,7 +131,7 @@ main {
 
 /* section_experience css start */
 #section_experience {
-  height: 500px;
+  height: 450px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -173,7 +174,7 @@ main {
 .section_education_content {
   display: flex;
   flex-direction: row;
-  padding-bottom: 30px; 
+  padding-bottom: 30px;
   margin-top: 60px;
 }
 .section_education_content p {
@@ -182,9 +183,8 @@ main {
 }
 .section_education_header {
   font-size: 35px;
-  padding-bottom: 50px;
   color: rgb(52, 58, 64);
- 
+  margin-top: 40px;
 }
 .section_education_name {
   font-size: 25px;
@@ -215,6 +215,7 @@ main {
 
 /* section_skills css start */
 #section_skills {
+  z-index: -1;
   padding: 60px 45px;
 }
 .section_skills_header {
@@ -257,25 +258,25 @@ main {
 }
 .skills_percent .fill {
   height: 100%;
-  background-color: #222 ;
+  background-color: #222;
   padding-left: 30px;
 }
-.fill_html{
-    width: 100%;
+.fill_html {
+  width: 100%;
 }
-.fill_css{
+.fill_css {
   width: 80%;
 }
-.fill_js{
+.fill_js {
   width: 60%;
 }
-.fill_py{
+.fill_py {
   width: 70%;
 }
-.fill_react{
+.fill_react {
   width: 50%;
 }
-.fill_wp{
+.fill_wp {
   width: 55%;
 }
 /* section_skills css end */
@@ -330,7 +331,7 @@ main {
   }
   #navbar {
     width: 100%;
-    height: 55px;
+    height: 60px;
     background-color: rgb(189, 93, 56);
     position: fixed;
     display: flex;
@@ -357,9 +358,9 @@ main {
   }
   #navbar.active {
     height: 260px;
-    transition: 0.4s ease-in-out;
   }
   #navbar.active ul {
+    transition: 2s;
     opacity: 1;
   }
   main {
@@ -383,20 +384,34 @@ main {
     height: 40px;
     font-size: 20px;
   }
-  .skills{
+  .skills {
     flex-direction: column;
   }
 }
 @media only screen and (max-width: 600px) {
-  .skills{
+  section {
+    box-sizing: content-box;
+  }
+  .section_skills_icons .skills {
+    width: 100%;
+  }
+  section > h2 {
+    font-size: 30px !important;
+  }
+  section > p {
+    box-sizing: content-box;
+  }
+  #section_interests {
+    height: 450px;
+  }
+  .skills {
     flex-direction: column;
     align-items: flex-start;
     gap: 0;
     margin-bottom: 30px;
     z-index: -1;
   }
-.tip{
-  top: 30px !important;
-  
-}
+  .tip {
+    top: 30px !important;
+  }
 }
